opam-version: "2.0"
maintainer: "giraud.contact@yahoo.fr"
authors: [ "Hervé Giraud" ]
synopsis: "Simple Cmt information extractor"
license: "MIT"
homepage: "https://github.com/giraud/rincewind"
bug-reports: "https://github.com/giraud/rincewind"
depends: [
    "ocaml" {>= "4.06.1"}
    "dune"
    "cppo"
]
build: [
    ["dune" "subst"] {pinned}
    ["dune" "build" "-p" name "-j" jobs]
]